--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
 
 <p>Your GAUSS projects will be saved as JSON files.</p>
 
+<p>For more usage details, please visit the <a href="https://github.com/RumRogers/GAUSS/wiki">Wiki page</a>.</p>
+
+<p><b>Please note: only Chrome is supported at the moment. We're working on it.</b></p>
+
 <h2>
 <a id="license" class="anchor" href="#license" aria-hidden="true"><span class="octicon octicon-link"></span></a>License</h2>
 
