Fixed overflow CSS of the editor canvas nodes

--- a/Editor.html
+++ b/Editor.html
@@ -118,7 +118,7 @@
             </div>
             <div class="col-md-8 container room" style="display: none;">
                 <div class="col-md-12" style="position: fixed">
-                    <div class="canvas room" style="border: 1px solid #000000; width: 60%; height: 480px">
+                    <div class="canvas room" style="overflow: scroll; border: 1px solid #000000; width: 60%; height: 480px">
                     <canvas id="editor-canvas"> </canvas>
                     </div>
                     <div class="toolbar room">
@@ -194,7 +194,7 @@
             </div>
             <div class="col-md-8 container character" style="display: none;">
                 <div class="col-md-12" style="position: fixed;">
-                    <div class="canvas character" style="border: 1px solid #000000; width: 60%; height: 480px">
+                    <div class="canvas character" style="overflow: scroll; border: 1px solid #000000; width: 60%; height: 480px">
                         <canvas id="character-canvas"> </canvas>
                     </div>
                     <div class="toolbar character">
