--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
 
 <p>Your GAUSS projects will be saved as JSON files.</p>
 
+<p>GAUSS comes with a small demo project based on a room from <i><b>Monkey Island 2</b></i>. You can see how the exported game from the project looks like <a href="http://gaussdemogame.altervista.org/">here</a>.</p>
+
 <p>For more usage details, please visit the <a href="https://github.com/RumRogers/GAUSS/wiki">Wiki page</a>.</p>
 
 <p><b>Please note: only Chrome is supported at the moment. We're working on it.</b></p>
